# dyn-utils

./: Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: ci.yml
benches/: README.md  comparison.rs
dyn_utils/: all.html  attr.dyn_object.html  attr.dyn_trait.html  attr.sync.html  enum.TrySync.html  index.html  sidebar-items.js  struct.DynObject.html
dyn_utils/macros/: attr.dyn_object.html  attr.dyn_trait.html  attr.sync.html
dyn_utils/object/: index.html  sidebar-items.js  struct.DynObject.html  trait.DynTrait.html  trait.Vtable.html
dyn_utils/storage/: index.html  sidebar-items.js  struct.Align.html  struct.Box.html  struct.Raw.html  struct.RawOrBox.html  trait.Alignment.html  trait.FromBox.html  trait.Storage.html  type.DefaultStorage.html
examples/: async_callback.rs  no_macro.rs
macros/: Cargo.toml
macros/src/: dyn_object.rs  dyn_storage.rs  dyn_trait.rs  lib.rs  macros.rs  methods.rs  sync.rs  utils.rs
search.index/: 050f5bdc8825.js  0534ab3401a8.js  05c81840ed7d.js  12a436e718c0.js  23a1ad8f086b.js  2865ab84d93c.js  34860a22ad38.js  349ed6e79aa2.js  5502a9b1a4e0.js  56ae9d6507ac.js  6b583dd162da.js  7785f4b62730.js  root.js
search.index/crateNames/: 7e9ce47e62d0.js
search.index/desc/: a1c1a603684e.js  f2d1966a089f.js
search.index/entry/: 05753cdd25eb.js  d7b3dc1deb7f.js
search.index/function/: 24519d865ca7.js  61469fe6a4a1.js
search.index/generic_inverted_index/: 07aa71ab67f4.js  2e71f8708920.js
search.index/name/: 7cc7e4552d58.js  9db0b4b7d99f.js
search.index/normalizedName/: 656e71b55604.js  f2d4b745082a.js
search.index/path/: 838bc1b3374a.js  e76bf9a7ebd6.js
search.index/type/: 3af1cde77baa.js  db8796d10df0.js
src/: impls.rs  lib.rs  macros.rs  object.rs  private.rs  storage.rs  vtables.rs
src/dyn_utils/: impls.rs.html  lib.rs.html  macros.rs.html  object.rs.html  private.rs.html  storage.rs.html
tests/: compilation.rs  test.rs
tests/compilation/: errors.rs  errors.stderr  impls.expanded.rs  impls.rs  method_attrs.rs  method_attrs.stderr
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/future/future/: trait.Future.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/dyn_utils/object/: trait.DynTrait.js
type.impl/dyn_utils/storage/: struct.RawOrBox.js
