[workspace]
members = ["macros"]

[package]
name = "dyn-utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc"]
alloc = []

[dependencies]
elain = "0.3"
dyn-utils-macros = { path = "macros" }

[dev-dependencies]
async-trait = "0.1.89"
divan = "0.1"
dynify = "0.1.2"
dynosaur = "0.3.0"
futures = "0.3.31"
stackfuture = "0.3.1"
trybuild = "1.0.114"

[lib]
bench = false

[[bench]]
name = "comparison"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
unsafe_op_in_unsafe_fn = "forbid"
unused_unsafe = "forbid"

[lints.clippy]
dbg_macro = "warn"
missing_safety_doc = "allow"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "deny"
