[workspace]
members = ["macros"]

[package]
name = "dyn-utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc", "macros", "const_panic"]
macros = ["dyn-utils-macros"]
alloc = []

[dependencies]
const_panic = { version = "0.2", optional = true }
dyn-utils-macros = { path = "macros", optional = true }
elain = "0.3"

[dev-dependencies]
async-trait = "0.1.89"
divan = "0.1"
dynify = "0.1.2"
dynosaur = "0.3.0"
futures = "0.3.31"
macrotest = "1.2.0"
stackfuture = "0.3.1"
trybuild = "1.0.114"

[lib]
bench = false

[[bench]]
name = "comparison"
harness = false
required-features = ["macros"]

[[example]]
name = "async_callback"
required-features = ["macros"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
unsafe_op_in_unsafe_fn = "forbid"
unused_unsafe = "forbid"

[lints.clippy]
dbg_macro = "warn"
missing_safety_doc = "allow"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "deny"
