[package]
name = "dyn-utils-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
