[package]
name = "dyn-utils-macros"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyfo/dyn-utils"
readme = "../README.md"
keywords = ["async", "no_std", "no_alloc"]
categories = ["asynchronous", "no-std", "no-std::no-alloc"]
description = "A utility library for working with trait objects."

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut", "extra-traits"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
